--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,6 @@
-on: [push]
+on:
+  release:
+    types: [published]
 
 jobs:
   mcs-action:
@@ -8,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - id: mc
-      uses: xdevma/mc-action@v18
+      uses: xdevma/mc-action@v19
       with:
         version: ${{ secrets.VERSION }}
         gpg_key: ${{ secrets.PGP_KEY }}
