--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,4 @@ jobs:
       with:
         sona: ${{ secrets.SONA }}
         profile: ${{ secrets.REPO_PROFILE }}
+        repo-id: ${{ steps.mc.outputs.repo-id }}
